# entra-mcp-python

./: .gitignore  Readme.md
copilot-entra-agent/: m365agents.yml
copilot-entra-agent/appPackage/: ai-plugin.json  declarativeAgent.json  instruction.txt  manifest.json
python-entra-mcp-server/: entra_service.py  graph_factory.py  main.py  pyproject.toml  requirements.txt
